# axel-tournament

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
api/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
api/src/: app_state.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  router.rs
api/src/handlers/: auth.rs  dockerfile.rs  game.rs  game_template.rs  leaderboard.rs  match_policy.rs  matches.rs  mod.rs  room.rs  submission.rs  tournament.rs
api/src/middleware/: game_setter.rs  mod.rs
api/src/models/: game.rs  game_template.rs  match_policy.rs  matches.rs  mod.rs  room.rs  submission.rs  tournament.rs
api/src/services/: dockerfile.rs  email.rs  game.rs  game_code.rs  game_template.rs  healer.rs  interactive_match.rs  leaderboard.rs  match_policy.rs  matches.rs  mod.rs  room.rs  submission.rs  tournament.rs
api/tests/: api_auth.rs  api_auth_tests.rs  api_game.rs  api_game_code_tests.rs  api_game_tests.rs  api_leaderboard_tests.rs  api_submission.rs  api_submission_tests.rs  api_tournament.rs  api_tournament_e2e_test.rs  api_tournament_tests.rs  api_user.rs  auth.rs  db.rs  game_service_tests.rs  game_setter_tests.rs  interactive_game_e2e_test.rs  leaderboard.rs  leaderboard_service_tests.rs  service_tournament.rs  service_user.rs  submission.rs  submission_service_tests.rs  tournament.rs  tournament_service_tests.rs  user.rs  user_service_tests.rs
api/tests/common/: mod.rs
backend/: .env.example  .gitignore  Cargo.toml  Makefile  README.md
backend/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  router.rs
backend/src/handlers/: admin.rs  auth.rs  dockerfile.rs  game.rs  game_code.rs  game_template.rs  leaderboard.rs  match_policy.rs  matches.rs  mod.rs  submission.rs  tournament.rs  user.rs
backend/src/middleware/: auth.rs  game_setter.rs  match_runner.rs  mod.rs
backend/src/models/: game.rs  game_template.rs  leaderboard.rs  match_policy.rs  matches.rs  mod.rs  submission.rs  tournament.rs  user.rs
backend/src/services/: auth.rs  dockerfile.rs  game.rs  game_code.rs  game_template.rs  leaderboard.rs  match_policy.rs  matches.rs  mod.rs  submission.rs  tournament.rs  user.rs
backend/tests/: api_auth_tests.rs  api_game_code_tests.rs  api_game_tests.rs  api_leaderboard_tests.rs  api_match_tests.rs  api_submission_tests.rs  api_tournament_e2e_test.rs  api_tournament_tests.rs  api_user_tests.rs  auth_service_tests.rs  game_service_tests.rs  game_setter_tests.rs  leaderboard_service_tests.rs  match_service_tests.rs  submission_service_tests.rs  tournament_service_tests.rs  user_service_tests.rs
backend/tests/common/: mod.rs
frontend/: .env.example  Dockerfile  package.json  svelte.config.js
frontend/src/: app.css
games/game-framework/: Cargo.toml  README.md  sandbox.Dockerfile
games/game-framework/src/: automated.rs  automated_executor.rs  db_client.rs  docker_player.rs  game_trait.rs  interactive.rs  lib.rs  match_watcher.rs  server.rs  websocket_room.rs
games/game-framework/tests/: echo_game_integration_test.rs
games/prisoner_dilema/: client_tit_for_tat.rs  server.rs
games/prisoners-dilemma/: Cargo.toml  Dockerfile  README.md  entrypoint.sh
games/prisoners-dilemma/src/: game_logic.rs  lib.rs  main.rs
games/prisoners-dilemma/tests/: game_logic_tests.rs
games/rock-paper-scissors/: Cargo.toml  (+3 more)
healer/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  entrypoint.sh
healer/src/: compiler.rs  db_client.rs  main.rs
infra/: .env.example  .gitignore  Makefile  README.md  acm.tf  aws-load-balancer-controller.tf  dns-records.tf  ecr.tf  efs.tf  eks.tf  load-balancer-controller.tf  main.tf  outputs.tf  route53.tf  ses.tf  variables.tf  versions.tf
interactive-judge/: Cargo.toml  Dockerfile
interactive-judge/src/: main.rs
judge/: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.universal  Makefile  README.md  entrypoint.sh  test-deps.toml
judge/protocols/: README.md  prisoners-dilemma.md  rock-paper-scissors.md  room.md  tic-tac-toe.md
judge/src/: api_client.rs  app_state.rs  auth.rs  compiler.rs  config.rs  db.rs  db_client.rs  docker_runner.rs  game_logic.rs  game_metadata.rs  handlers.rs  lib.rs  main.rs  match_watcher.rs  room.rs  router.rs  sandbox-entrypoint.sh  sandbox.Dockerfile  services.rs  websocket_handler.rs
judge/src/games/: game.rs  mod.rs  prisoners_dilemma.rs  rock_paper_scissors.rs  tic_tac_toe.rs
judge/src/handlers/: mod.rs  room.rs
judge/src/middleware/: auth.rs
judge/src/models/: game.rs  game_metadata.rs  mod.rs  room.rs
judge/src/models/players/: bot_player.rs  human_player.rs  mod.rs
judge/src/players/: bot_player.rs  human_player.rs  mod.rs  player.rs
judge/src/room/: db.rs  handlers.rs  manager.rs  mod.rs  models.rs  websocket.rs
judge/src/sandbox/: cgroup.rs  compiler.rs  executor.rs  landlock.rs  mod.rs  namespace.rs  rootfs.rs  seccomp.rs
judge/src/services/: capacity.rs  compiler.rs  match_watcher.rs  mod.rs
judge/src/services/room/: db.rs  manager.rs  mod.rs  websocket.rs
judge/src/services/sandbox/: cgroup.rs  compiler.rs  executor.rs  landlock.rs  mod.rs  namespace.rs  rootfs.rs  seccomp.rs
judge/tests/: capacity.rs  compiler.rs  connection.rs  db.rs  e2e.rs  game.rs  game_logic.rs  game_protocol.rs  judge_e2e_test.rs  pentest.rs
judge/tests/bots/: pd_cooperate.rs  pd_defect.rs  rps_paper.c  rps_paper.go  rps_paper.rs  rps_rock.c  rps_rock.go  rps_rock.rs  ttt_middle_col.rs  ttt_top_row.rs
judge/tests/common/: mod.rs
judge/tests/malicious/: README.md  fd_attack.rs  list_home.c  list_root.rs  path_traversal.c  read_passwd.c  read_passwd.rs  read_proc_self.c  read_shadow.c  symlink_attack.rs  write_tmp.c
k8s/: namespaces.yaml
src/: db.rs  lib.rs  main.rs
tests/: api_auth_tests.rs  api_game_tests.rs  api_leaderboard_tests.rs  api_match_tests.rs  api_tests.rs  api_tournament_tests.rs  integration_tests.rs  match_service_tests.rs  submission_service_tests.rs  tournament_service_tests.rs
web/: .dockerignore  Dockerfile  README.md  nginx.conf  package.json  svelte.config.js
(+276 files in other folders)
