[package]
name = "axel-tournament"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
surrealdb = { version = "2.0", features = ["kv-mem", "protocol-ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }
# OAuth2
oauth2 = "4.4"
reqwest = { version = "0.12", features = ["json"] }
config = "0.14"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
validator = { version = "0.18", features = ["derive"] }
# Email (for password reset)
lettre = "0.11"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
axum-test = "14"
serial_test = "3.0"
once_cell = "1.19"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
