[workspace]
resolver = "2"
members = ["api", "judge"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Web framework
axum = { version = "0.8" }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Database
surrealdb = { version = "2.4", features = ["protocol-ws"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Auth & Security
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
argon2 = "0.5"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
anyhow = "1"
thiserror = "1"
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Async utilities
async-trait = "0.1.89"
futures-util = "0.3"
