[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
# Web framework
axum = { workspace = true, features = ["macros", "multipart"] }
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true

# Database
surrealdb.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Auth & Security
jsonwebtoken.workspace = true
argon2.workspace = true
oauth2 = { version = "5", features = ["reqwest"] }
reqwest = { version = "0.12", features = ["json"] }

# Utilities
uuid.workspace = true
chrono.workspace = true
rand.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dotenv.workspace = true
validator = { version = "0.20", features = ["derive"] }
sha2 = "0.10"

# Email
lettre = "0.11"

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
