[package]
name = "axel-tournament"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
surrealdb = { version = "2.4", features = ["protocol-ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.5"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rand = "0.9"
uuid = { version = "1.6", features = ["v4", "serde"] }
oauth2 = { version = "5", features = ["reqwest"] }
reqwest = { version = "0.12", features = ["json"] }
config = "0.14"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
validator = { version = "0.20", features = ["derive"] }
# Email (for password reset)
lettre = "0.11"

[dev-dependencies]
http-body-util = "0.1"
