[package]
name = "interactive-judge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surrealdb = { version = "2.4", features = ["protocol-ws"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
