[package]
name = "judge"
version = "0.1.0"
edition = "2024"

[lib]
name = "judge"
path = "src/lib.rs"

[[bin]]
name = "judge"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
surrealdb = { version = "2.4", features = ["protocol-ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
bollard = "0.17"
async-trait = "0.1.89"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
