[package]
name = "judge"
version.workspace = true
edition.workspace = true

[lib]
name = "judge"
path = "src/lib.rs"

[[bin]]
name = "judge"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { workspace = true, features = ["ws"] }
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true

# Database
surrealdb.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Auth
jsonwebtoken.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
rand.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dotenv.workspace = true
async-trait.workspace = true
futures-util.workspace = true
tempfile = "3.0"

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Linux primitives for sandboxing
nix = { version = "0.29", features = ["user", "mount", "sched", "process", "signal", "resource", "fs"] }
landlock = "0.4"
cgroups-rs = "0.3"
tokio-pipe = "0.2"
tokio-util = { version = "0.7", features = ["codec"] }
caps = "0.5"
seccompiler = "0.4"
libc = "0.2"
