[package]
name = "game-framework"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
bollard = "0.16"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surrealdb = { version = "2.4", features = ["protocol-ws"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
