[package]
name = "prisoners-dilemma-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "prisoners_dilemma"
path = "src/lib.rs"

[[bin]]
name = "prisoners-dilemma-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
game-framework = { path = "../game-framework" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
